# voxmix

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: error.rs  main.rs
src/commands/: say.rs
src/voicevox/: client.rs  mod.rs  types.rs
tests/: integration_tests.rs
