[package]
name = "voxmix"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "A CLI tool for high-quality speech synthesis using VOICEVOX engine"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/your-username/voxmix"
keywords = ["cli", "tts", "voicevox", "speech-synthesis"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
hound = "3.5"
indicatif = "0.17"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"